<resources>
    <string name="app_name">FinalButterknife</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_user_name">Enter user name</string>
    <string name= "greeting"> Hello,  </string>
    <string name="terrier"> Terrier </string>
    <string name="spaniel"> Spaniel </string>
    <string name="retriever"> Retriever </string>
    <string name="poodle"> Poodle </string>
    <string name="dog_question">What dog would you like {enter_user_name} ?</string>
</resources>
